--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -220,7 +220,7 @@
     <string name="pref_camera_timer_sound_title">Beep during countdown</string>
 
     <!-- Entry of camera save path -->
-    <string name="pref_camera_savepath_title">Storage Position</string>
+    <string name="pref_camera_savepath_title">Storage location</string>
     <string name="pref_camera_savepath_default">0</string>
     <string name="pref_camera_savepath_entry_0">Phone</string>
     <string name="pref_camera_savepath_entry_1">SD Card</string>
@@ -236,7 +236,7 @@
     <string name="setting_on_value" translatable="false">on</string>
 
     <!-- The Video quality settings in preference [CHAR LIMIT=21] -->
-    <string name="pref_video_quality_title">Video quality</string>
+    <string name="pref_video_quality_title">Video size</string>
     <!-- The default quality value is NULL -->
     <string name="pref_video_quality_default" translatable="false"></string>
     <!-- Video quality setting entry.
@@ -256,7 +256,7 @@
 
     <!-- Describes the preference dialog for choosing interval between frame capture for
     time lapse recording. Appears at top of the dialog. [CHAR LIMIT=30] -->
-    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
+    <string name="pref_video_time_lapse_frame_interval_title">Timelapse</string>
     <string name="pref_video_time_lapse_frame_interval_default" translatable="false">0</string>
 
     <!-- Settings screen, Camera setting category title -->
